syntax = "proto2";

package api.stats;

message DataFrames {
    optional bytes game_frames = 1;
}
